--- a/pom.xml
+++ b/pom.xml
@@ -15,9 +15,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.javaslang</groupId>
+            <groupId>io.javaslang</groupId>
             <artifactId>javaslang</artifactId>
-            <version>2.0.0-RC2</version>
+            <version>2.0.5</version>
         </dependency>
     </dependencies>
 </project>
